tests/NormalTests/paczka1/small_fuzzy/41285423.err
Error in line 3: nQej3ffXEP S330 97,9
Error in line 6: nQej3ffXEP S895 88,4
Error in line 10: wCDdQ S330 0,9
Error in line 15: zcBCC7 S330 52,4
